2005-11-06  Andreas Tobler  <a.tobler@schweiz.ch>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_setGradientUnlocked): Update
	debug output to reflect actual situation.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_setTexturePixelsUnlocked):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_drawPixels): Adjust
	formatting.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoSetMatrixUnlocked):
	Update debug output to reflect actual situation.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoSetRGBAColorUnlocked):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoCurveTo): Adjust
	formatting.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoRelCurveTo): Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoRectangle): Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoSurfaceSetFilterUnlocked):
	Update debug output to reflect actual situation.

2005-11-06  Mark Wielaard  <mark@klomp.org>

	* java/awt/image/AreaAveragingScaleFilter.java: Add FIXME
	* java/awt/Image.java (getScaledInstance): In case of
	SCALE_AREA_AVERAGING use AreaAveragingScaleFilter.

2005-11-06  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/event/PrintEvent.java,
	javax/print/event/PrintJobAdapter.java,
	javax/print/event/PrintJobAttributeEvent.java,
	javax/print/event/PrintJobAttributeListener.java,
	javax/print/event/PrintJobEvent.java,
	javax/print/event/PrintJobListener.java,
	javax/print/event/PrintServiceAttributeEvent.java,
	javax/print/event/PrintServiceAttributeListener.java,
	javax/print/event/package.html: Added API docs all over.

2005-11-06  Wolfgang Baer  <WBaer@gmx.de>

	* java/io/File.java
	(getParent): If pathname is "" return null.
	(toURI): Also append separatorChar if path equals "".
	(getAbsolutePath): If path equals "" only return the value
	of the user.dir system property.

2005-11-06  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/XMLStreamWriterImpl.java: Ensure that generated