@@ -1,3 +1,11 @@
+2005-11-06  Mark Wielaard  <mark@klomp.org>
+
+	* javax/swing/Timer.java (Waker.run): Test and set running while
+	holding queueLock.
+	(start): Set running to true.
+	(stop): Unconditionally notify queueLock.
+	(queueEvent): Only called when queueLock already held.
+
 2005-11-06  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
